# Project-Manager-Skill

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  install.ps1  install.sh  pm.py  projects.example.pm  pyproject.toml
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml
docs/: docs.md
examples/: linear-pak.env.example
src/claude_pm/: __init__.py  __main__.py  _stdio.py  cli.py  config.py  enums.py  exceptions.py
src/claude_pm/application/: briefing.py  issue_creation.py  search.py  setup_flow.py
src/claude_pm/commands/: _helpers.py  briefing.py  create_issue.py  doctor.py  lists.py  search.py  setup.py  update_issue.py
src/claude_pm/domain/: models.py  ports.py
src/claude_pm/infrastructure/: cache.py  repo_detect.py
src/claude_pm/infrastructure/context/: null.py  obsidian.py
src/claude_pm/infrastructure/providers/: _http.py  _registry.py  clickup.py  linear.py
